--- a/package.json
+++ b/package.json
@@ -42,7 +42,10 @@
     "serve-favicon": "^2.4.2"
   },
   "devDependencies": {
+    "babel-plugin-transform-inline-environment-variables": "^0.1.1",
+    "babelify": "^7.3.0",
     "grunt": "^1.0.1",
+    "grunt-browserify": "^5.0.0",
     "grunt-contrib-clean": "^1.1.0",
     "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-copy": "^1.0.0",
