--- a/package.json
+++ b/package.json
@@ -24,24 +24,25 @@
   },
   "dependencies": {
     "apicache": "^0.8.6",
-    "body-parser": "^1.17.1",
-    "babel-core": "^6.24.1",
-    "babel-register": "^6.24.1",
-    "babel-polyfill": "^6.23.0",
+    "autotrack": "^2.4.1",
+    "babel-core": "^6.25.0",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-transform-async-to-generator": "^6.24.1",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "babel-register": "^6.24.1",
+    "body-parser": "^1.17.2",
     "compression": "^1.6.2",
     "cors": "^2.8.3",
-    "dotenv-safe": "^4.0.3",
-    "express": "^4.15.2",
+    "dotenv-safe": "^4.0.4",
+    "express": "^4.15.3",
     "namespaced-console-logger": "^1.0.1",
     "request": "^2.81.0",
-    "request-promise": "^4.2.0",
-    "serve-favicon": "^2.4.2"
+    "request-promise": "^4.2.1",
+    "serve-favicon": "^2.4.3"
   },
   "devDependencies": {
     "babel-plugin-transform-inline-environment-variables": "^0.1.1",
