--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "babel-cli": "^6.24.1",
     "babel-plugin-transform-inline-environment-variables": "^0.1.1",
     "babelify": "^7.3.0",
+    "elm": "^0.18.0",
     "grunt": "^1.0.1",
     "grunt-browserify": "^5.0.0",
     "grunt-contrib-clean": "^1.1.0",
