--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "start": "node server.js",
     "server": "nodemon server.js",
     "build": "elm make app/App.elm --output=frontend/elm.js && grunt",
+    "postbuild": "html-minifier --config-file htmlMinifier.conf --output public/index.html frontend/index.html",
     "dev": "elm-live --output=frontend/elm.js app/App.elm --pushstate --open --debug --dir=frontend"
   },
   "dependencies": {
@@ -55,7 +56,6 @@
     "grunt-contrib-clean": "^1.1.0",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-cssmin": "^2.2.0",
-    "grunt-contrib-htmlmin": "^2.4.0",
     "grunt-contrib-imagemin": "^1.0.1",
     "grunt-contrib-uglify": "^3.0.1",
     "html-minifier": "^3.5.2",
