copy assets outside of grunt

--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "start": "node server.js",
     "server": "nodemon server.js",
     "prebuild": "yarn run clean",
-    "build": "elm make app/App.elm --output=frontend/elm.js && grunt",
+    "build": "elm make app/App.elm --output=frontend/elm.js && yarn run build:assets && grunt",
+    "build:assets": "cp -r frontend/img public/img && cp frontend/favicon.ico public/favicon.ico && cp frontend/manifest.json public/manifest.json",
     "postbuild": "html-minifier --config-file htmlMinifier.conf --output public/index.html frontend/index.html",
     "dev": "elm-live --output=frontend/elm.js app/App.elm --pushstate --open --debug --dir=frontend"
   },
@@ -53,6 +54,9 @@
     "babel-plugin-transform-inline-environment-variables": "^0.1.1",
     "babelify": "^7.3.0",
     "elm": "^0.18.0",
+    "hashmark": "3.1.0",
+    "injectassets": "1.0.2",
+    "replaceinfiles": "1.1.1",
     "grunt": "^1.0.1",
     "grunt-browserify": "^5.0.0",
     "grunt-contrib-copy": "^1.0.0",
