--- a/package.json
+++ b/package.json
@@ -21,8 +21,9 @@
     "start": "node server.js",
     "server": "nodemon server.js",
     "prebuild": "rimraf public/*",
-    "build": "elm make app/App.elm --output=frontend/js/elm.js && yarn run build:assets && grunt && yarn build:js && yarn run build:html",
-    "build:assets": "cp -r frontend/assets public/assets",
+    "build": "elm make app/App.elm --output=frontend/js/elm.js && yarn run build:assets && yarn run build:css && grunt && yarn build:js && yarn run build:html",
+    "build:assets": "cp -r frontend/assets public/assets && mkdir public/styles",
+    "build:css": "cleancss -o public/styles/index.css frontend/styles/index.css",
     "build:js": "uglifyjs frontend/js/elm.js -c -o public/js/elm.js && uglifyjs public/js/analyticsBase.js -c -o public/js/analyticsBase.js",
     "build:mark": "hashmark -c public -r -l 6 -m public/assets.json 'assets/**/*.*' '{dir}/{name}-{hash}{ext}' && hashmark -s -c public -r -l 6 -m public/assets.json '**/*.{css,js}' '{dir}/{name}-{hash}{ext}'",
     "build:html": "html-minifier --config-file htmlMinifier.conf --output public/index.html frontend/index.html",
@@ -54,13 +55,12 @@
     "babel-cli": "^6.24.1",
     "babel-plugin-transform-inline-environment-variables": "^0.1.1",
     "babelify": "^7.3.0",
+    "clean-css-cli": "^4.1.4",
     "elm": "^0.18.0",
     "grunt": "^1.0.1",
     "grunt-browserify": "^5.0.0",
     "grunt-contrib-copy": "^1.0.0",
-    "grunt-contrib-cssmin": "^2.2.0",
     "grunt-contrib-imagemin": "^1.0.1",
-    "grunt-contrib-uglify": "^3.0.1",
     "hashmark": "3.1.0",
     "html-minifier": "^3.5.2",
     "nodemon": "^1.11.0",
