--- a/package.json
+++ b/package.json
@@ -16,15 +16,49 @@
   "bugs": {
     "url": "https://github.com/lamogura/git-involved.elm/issues"
   },
+  "browserify": {
+    "transform": [
+      [
+        "babelify",
+        {
+          "presets": [
+            "es2015",
+            "stage-2"
+          ],
+          "plugins": [
+            [
+              "add-module-exports"
+            ],
+            [
+              "transform-async-to-generator"
+            ],
+            [
+              "transform-es2015-modules-commonjs"
+            ],
+            [
+              "transform-inline-environment-variables"
+            ],
+            [
+              "transform-object-rest-spread",
+              {
+                "useBuiltIns": true
+              }
+            ]
+          ]
+        }
+      ]
+    ]
+  },
   "scripts": {
     "test": "./node_modules/.bin/elm-test tests/RunTestsInTerminal.elm",
     "start": "node server.js",
     "server": "nodemon server.js",
     "prebuild": "rimraf public/*",
-    "build": "elm make app/App.elm --output=frontend/js/elm.js && yarn run build:assets && yarn run build:css && grunt && yarn build:js && yarn run build:html",
-    "build:assets": "cp -r frontend/assets public/assets && mkdir public/styles",
-    "build:css": "cleancss -o public/styles/index.css frontend/styles/index.css",
-    "build:js": "uglifyjs frontend/js/elm.js -c -o public/js/elm.js && uglifyjs public/js/analyticsBase.js -c -o public/js/analyticsBase.js",
+    "build": "elm make app/App.elm --output=frontend/js/elm.js && yarn build:assets && yarn build:images && yarn build:css && yarn build:js && yarn build:html",
+    "build:assets": "mkdir public/styles && mkdir public/js && mkdir public/assets && cp frontend/assets/favicon.ico public/assets/favicon.ico && cp frontend/assets/manifest.json public/assets/manifest.json",
+    "build:images": "imagemin frontend/assets/*.png --out-dir=public/assets",
+    "build:css": "cleancss -O2 -o public/styles/index.css frontend/styles/index.css",
+    "build:js": "uglifyjs frontend/js/elm.js -c -o public/js/elm.js && browserify -d frontend/js/analyticsBase.js -p [minifyify --map public/js/analytics.js.map --output public/js/analytics.js.map --uglify [ --compress ] ] > public/js/analyticsBase.js",
     "build:mark": "hashmark -c public -r -l 6 -m public/assets.json 'assets/**/*.*' '{dir}/{name}-{hash}{ext}' && hashmark -s -c public -r -l 6 -m public/assets.json '**/*.{css,js}' '{dir}/{name}-{hash}{ext}'",
     "build:html": "html-minifier --config-file htmlMinifier.conf --output public/index.html frontend/index.html",
     "dev": "elm-live --output=frontend/elm.js app/App.elm --pushstate --open --debug --dir=frontend"
@@ -55,14 +89,14 @@
     "babel-cli": "^6.24.1",
     "babel-plugin-transform-inline-environment-variables": "^0.1.1",
     "babelify": "^7.3.0",
+    "browserify": "^14.4.0",
     "clean-css-cli": "^4.1.4",
     "elm": "^0.18.0",
-    "grunt": "^1.0.1",
-    "grunt-browserify": "^5.0.0",
-    "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-imagemin": "^1.0.1",
     "hashmark": "3.1.0",
     "html-minifier": "^3.5.2",
+    "imagemin-cli": "^3.0.0",
+    "minifyify": "^7.3.5",
     "nodemon": "^1.11.0",
     "rimraf": "^2.6.1",
     "uglify-js": "^3.0.15"
