separate build for elm

--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "start": "node server.js",
     "server": "nodemon server.js",
     "prebuild": "rimraf public/*",
-    "build": "elm make app/App.elm --output=frontend/js/elm.js && yarn build:assets && yarn build:images && yarn build:css && yarn build:js && yarn build:html",
+    "build": "yarn build:elm && yarn build:assets && yarn build:images && yarn build:css && yarn build:js && yarn build:html",
+    "build:elm": "elm make app/App.elm --output=frontend/js/elm.js",
     "build:assets": "mkdir public/styles && mkdir public/js && mkdir public/assets && cp frontend/assets/favicon.ico public/assets/favicon.ico && cp frontend/assets/manifest.json public/assets/manifest.json",
     "build:images": "imagemin frontend/assets/*.png --out-dir=public/assets",
     "build:css": "cleancss -O2 -o public/styles/index.css frontend/styles/index.css",
