--- a/package.json
+++ b/package.json
@@ -54,10 +54,10 @@
     "start": "node server.js",
     "dev:server": "nodemon server.js",
     "dev:client": "elm-live --output=frontend/elm.js app/App.elm --pushstate --open --debug --dir=frontend",
-    "prebuild": "rimraf js && rimraf styles && rimraf assets && rimraf robots.txt && rimraf index.html",
+    "prebuild": "rimraf js && rimraf styles && rimraf assets && rimraf robots.txt && rimraf index.html && rimraf sitemap.xml",
     "build": "yarn build:elm && yarn build:assets && yarn build:images && yarn build:css && yarn build:js && yarn build:html && yarn build:mark",
     "build:elm": "elm make app/App.elm --output=frontend/js/elm.js",
-    "build:assets": "mkdir styles && mkdir js && mkdir assets && cp frontend/assets/favicon.ico assets/favicon.ico && cp frontend/assets/manifest.json assets/manifest.json && cp frontend/robots.txt robots.txt",
+    "build:assets": "mkdir styles && mkdir js && mkdir assets && cp frontend/assets/favicon.ico assets/favicon.ico && cp frontend/assets/manifest.json assets/manifest.json && cp frontend/robots.txt robots.txt && cp frontend/sitemap.xml sitemap.xml",
     "build:images": "imagemin frontend/assets/*.png --out-dir=assets",
     "build:css": "cleancss -O2 -o styles/index.css frontend/styles/cssRemoveAndCombine.css",
     "build:js": "uglifyjs frontend/js/elm.js -c -o js/elm.js && browserify -d frontend/js/analyticsBase.js -p [minifyify --map js/analytics.js.map --output js/analytics.js.map --uglify [ --compress ] ] > js/analyticsBase.js",
