--- a/package.json
+++ b/package.json
@@ -82,6 +82,8 @@
     "cors": "^2.8.3",
     "dotenv-safe": "^4.0.4",
     "express": "^4.15.3",
+    "express-enforces-ssl": "^1.1.0",
+    "helmet": "^3.6.1",
     "namespaced-console-logger": "^1.0.1",
     "prerender-node": "^2.7.1",
     "request": "^2.81.0",
