--- a/Dockerfile.nginx
+++ b/Dockerfile.nginx
@@ -1,10 +1,7 @@
 FROM nginx:latest
 
-WORKDIR /public
+COPY public /usr/share/nginx/html
 
-ADD public .
+# COPY nginx.conf /etc/nginx/nginx.conf
 
-RUN rm -v /etc/nginx/nginx.conf
-ADD nginx.conf /etc/nginx/
-
-CMD nginx
+# EXPOSE 80
