--- a/nginx.conf
+++ b/nginx.conf
@@ -24,6 +24,12 @@ http {
     default_type  application/octet-stream;
     #
 
+    #log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+    #                  '$status $body_bytes_sent "$http_referer" '
+    #                  '"$http_user_agent" "$http_x_forwarded_for"';
+
+    #access_log  logs/access.log  main;
+
     sendfile        on;
     # If serving locally stored static files, sendfile is essential to speed up the server,
     # But if using as reverse proxy one can deactivate it
@@ -54,14 +60,8 @@ http {
 
         location / {
             #The location setting lets you configure how nginx responds to requests for resources within the server.
-            root   public;
+            root   html;
             index  index.html index.htm;
-            # proxy_pass http://localhost:8080;
-            # proxy_http_version 1.1;
-            # proxy_set_header Upgrade $http_upgrade;
-            # proxy_set_header Connection 'upgrade';
-            # proxy_set_header Host $host;
-            # proxy_cache_bypass $http_upgrade;
         }
 
         #error_page  404              /404.html;
