--- a/package.json
+++ b/package.json
@@ -97,7 +97,8 @@
     "browserify": "^14.4.0",
     "clean-css-cli": "^4.1.4",
     "elm": "^0.18.0",
-    "hashmark": "3.1.0",
+    "elm-test": "^0.18.6",
+    "hashmark": "4.1.0",
     "html-minifier": "^3.5.2",
     "imagemin-cli": "^3.0.0",
     "minifyify": "^7.3.5",
