--- a/Dockerfile.nginx
+++ b/Dockerfile.nginx
@@ -1,7 +1,8 @@
 FROM nginx:latest
 
-COPY public /usr/share/nginx/html
+COPY public /usr/share/nginx/html/
 
-# COPY nginx.conf /etc/nginx/nginx.conf
+COPY nginx.conf /etc/nginx/
+RUN nginx -t -c /etc/nginx/nginx.conf
 
-# EXPOSE 80
+CMD ["nginx", "-g", "daemon off;"]
