--- a/nginx.conf
+++ b/nginx.conf
@@ -1,66 +1,42 @@
-#user  nobody;
-#Defines which Linux system user will own and run the Nginx server
 
+user  nginx;
 worker_processes  1;
-#Referes to single threaded process. Generally set to be equal to the number of CPUs or cores.
 
-#error_log  logs/error.log; #error_log  logs/error.log  notice;
-#Specifies the file where server logs.
+error_log  /var/log/nginx/error.log warn;
+pid        /var/run/nginx.pid;
 
-#pid        logs/nginx.pid;
-#nginx will write its master process ID(PID).
 
 events {
     worker_connections  1024;
-    # worker_processes and worker_connections allows you to calculate maxclients value:
-    # max_clients = worker_processes * worker_connections
 }
 
 
 http {
-    include       mime.types;
-    # anything written in /opt/nginx/conf/mime.types is interpreted as if written inside the http { } block
-
+    include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
-    #
 
-    #log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
-    #                  '$status $body_bytes_sent "$http_referer" '
-    #                  '"$http_user_agent" "$http_x_forwarded_for"';
+    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+                      '$status $body_bytes_sent "$http_referer" '
+                      '"$http_user_agent" "$http_x_forwarded_for"';
 
-    #access_log  logs/access.log  main;
+    access_log  /var/log/nginx/access.log  main;
 
     sendfile        on;
-    # If serving locally stored static files, sendfile is essential to speed up the server,
-    # But if using as reverse proxy one can deactivate it
-
     #tcp_nopush     on;
-    # works opposite to tcp_nodelay. Instead of optimizing delays, it optimizes the amount of data sent at once.
 
-    #keepalive_timeout  0;
     keepalive_timeout  65;
-    # timeout during which a keep-alive client connection will stay open.
 
-    #gzip  on;
-    # tells the server to use on-the-fly gzip compression.
+    gzip  on;
 
     server {
-        # You would want to make a separate file with its own server block for each virtual domain
-        # on your server and then include them.
         listen       80;
-        #tells Nginx the hostname and the TCP port where it should listen for HTTP connections.
-        # listen 80; is equivalent to listen *:80;
-
         server_name  localhost;
-        # lets you doname-based virtual hosting
 
         #charset koi8-r;
-
-        #access_log  logs/host.access.log  main;
+        #access_log  /var/log/nginx/log/host.access.log  main;
 
         location / {
-            #The location setting lets you configure how nginx responds to requests for resources within the server.
-            root   html;
+            root   /usr/share/nginx/html;
             index  index.html index.htm;
         }
 
@@ -70,7 +46,7 @@ http {
         #
         error_page   500 502 503 504  /50x.html;
         location = /50x.html {
-            root   html;
+            root   /usr/share/nginx/html;
         }
 
         # proxy the PHP scripts to Apache listening on 127.0.0.1:80
@@ -96,9 +72,9 @@ http {
         #    deny  all;
         #}
     }
+}
 
-
-    # another virtual host using mix of IP-, name-, and port-based configuration
+ # another virtual host using mix of IP-, name-, and port-based configuration
     #
     #server {
     #    listen       8000;
@@ -133,4 +109,3 @@ http {
     #    }
     #}
 
-}
