--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
   "scripts": {
     "test": "./node_modules/.bin/elm-test",
     "start": "node server.js",
+    "lint": "elm-analyse -s",
     "dev:server": "nodemon server.js",
     "dev:client": "elm-live --output=frontend/elm.js app/App.elm --pushstate --open --debug --dir=frontend",
     "prebuild": "rimraf public/*",
