--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "browserify": "^14.4.0",
     "clean-css-cli": "^4.1.4",
     "elm": "^0.18.0",
+    "elm-analyse": "^0.8.0",
     "elm-test": "^0.18.6",
     "hashmark": "4.1.0",
     "html-minifier": "^3.5.2",
