--- a/Dockerfile.nginx
+++ b/Dockerfile.nginx
@@ -6,3 +6,5 @@ COPY nginx.conf /etc/nginx/
 RUN nginx -t -c /etc/nginx/nginx.conf
 
 CMD ["nginx", "-g", "daemon off;"]
+
+HEALTHCHECK CMD curl --fail http://localhost/ || exit 1
