--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3"
 services:
   nginx:
-    build: .
+    build:
       context: .
       dockerfile: Dockerfile.nginx
     ports:
@@ -11,7 +11,7 @@ services:
     tty: true
     stdin_open: true
   node:
-    build: .
+    build:
       context: .
       dockerfile: Dockerfile
     # deploy:
