--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,25 +3,37 @@ jobs:
   build:
     docker:
       - image: circleci/node:latest
-    working_directory: ~/git-involved
+    working_directory: /git-involved
     steps:
       - checkout
       - restore_cache:
           keys:
             - v1-node-modules-{{ checksum "yarn.lock" }}
+            - v1-node-modules
       - run:
-          name: install dependencies
+          name: install javascript dependencies
           command: npm install
       - save_cache:
           key: v1-node-modules-{{ checksum "yarn.lock" }}
           paths:
             - /git-involved/node_modules
+      - restore_cache:
+          keys:
+            - v1-elm-stuff-{{ checksum "yarn.lock" }}
+            - v1-elm-stuff
+      - run:
+          name: install elm dependencies
+          command:  elm-package install
+      - save_cache:
+          key: v1-elm-stuff-{{ checksum "elm-package.json" }}
+          paths:
+            - /git-involved/elm-stuff
       - run:
           name: elm tests
           command: npm run test
-      - run:
-          name: build
-          command: docker-compose build
-      - run:
-          name: start
-          command: docker-compose up -d
+      # - run:
+      #     name: build
+      #     command: docker-compose build
+      # - run:
+      #     name: start
+      #     command: docker-compose up -d
