--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,29 +1,16 @@
 version: 2
 executorType: machine
-stages:
+jobs:
   build:
     working_directory: ~/git-involved
     steps:
       - checkout
-      - restore_cache:
-          keys:
-            - v2-node-modules-{{ checksum "yarn.lock" }}
-            - v2-node-modules
-      - restore_cache:
-          keys:
-            - v1-elm-stuff-{{ checksum "elm-package.json" }}
-            - v1-elm-stuff
       - run:
           name: build images
           command: docker-compose build
-      - save_cache:
-          key: v2-node-modules-{{ checksum "yarn.lock" }}
-          paths:
-            - ~/git-involved/node_modules
-      # - run:
-      #     name: elm tests
-      #     command: npm run test
-      # - save_cache:
-      #     key: v1-elm-stuff-{{ checksum "elm-package.json" }}
-      #     paths:
-      #       - ~/git-involved/elm-stuff
+      - run:
+          name: start the containers
+          command: docker-compose up
+      - run:
+          name: elm tests
+          command: docker-compose exec node npm run test
