do not use the latest part in the tag

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ jobs:
       - run:
           name: push the images
           command: |
-            docker tag gitinvolvedelm_node:latest happysalada/gitinvolved_node:latest
-            docker tag gitinvolvedelm_node:latest happysalada/gitinvolved_nginx:latest
+            docker tag gitinvolvedelm_node happysalada/gitinvolved_node:latest
+            docker tag gitinvolvedelm_node happysalada/gitinvolved_nginx:latest
             docker push happysalada/gitinvolved_node:latest
             docker push happysalada/gitinvolved_nginx:latest
