check image name

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,6 +17,8 @@ jobs:
       - run:
           name: push the images
           command: |
+            set -exu
+            docker ps
             docker tag gitinvolvedelm_node happysalada/gitinvolved_node:latest
             docker tag gitinvolvedelm_node happysalada/gitinvolved_nginx:latest
             docker push happysalada/gitinvolved_node:latest
