push the images manually

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,12 +14,11 @@ jobs:
       - run:
           name: elm tests
           command: docker-compose exec node npm run test
-      - run:
-          name: push the images
-          command: |
-            set -exu
-            docker ps | grep node
-            docker tag gitinvolved_node happysalada/gitinvolved_node:latest
-            docker tag gitinvolved_nginx happysalada/gitinvolved_nginx:latest
-            docker push happysalada/gitinvolved_node:latest
-            docker push happysalada/gitinvolved_nginx:latest
+      # - run:
+      #     name: push the images
+      #     command: |
+      #       set -exu
+      #       docker tag $(docker ps | grep -oh node) happysalada/gitinvolved_node:latest
+      #       docker tag $(docker ps | grep -oh nginx) happysalada/gitinvolved_nginx:latest
+      #       docker push happysalada/gitinvolved_node:latest
+      #       docker push happysalada/gitinvolved_nginx:latest
