delete docker and nginx related files
not needed anymore since deploying on firebase hosting

--- a/firebase.json
+++ b/firebase.json
@@ -19,6 +19,9 @@
       "key" : "Cache-Control",
       "value" : "no-cache"
       } ]
+    },{
+      "source": "/",
+      "headers": [{"key": "Link", "value": "</js/elm-666605.js>;rel=preload;as=script"}]
     }],
     "rewrites": [
       {
