--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "dev:client": "elm-live --output=frontend/elm.js app/App.elm --pushstate --open --debug --dir=frontend",
     "dev:public": "browser-sync start --config 'bs-config.js'",
     "prebuild": "rimraf public/*",
-    "build": "yarn build:elm && yarn build:assets && yarn build:images && yarn build:css && yarn build:js && yarn build:html && yarn build:mark",
+    "build": "yarn build:elm && yarn build:assets && yarn build:images && yarn build:css && yarn build:js && yarn build:html && yarn build:mark && yarn update-cache-policy",
     "build:elm": "elm make app/App.elm --output=frontend/js/elm.js",
     "build:assets": "mkdir public/styles && mkdir public/js && mkdir public/assets && cp frontend/assets/favicon.ico public/assets/favicon.ico && cp frontend/assets/manifest.json public/assets/manifest.json && cp frontend/robots.txt public/robots.txt && cp frontend/sitemap.xml public/sitemap.xml",
     "build:images": "imagemin frontend/assets/*.png --out-dir=public/assets",
