--- a/frontend/assets/manifest.json
+++ b/frontend/assets/manifest.json
@@ -18,7 +18,7 @@
       "sizes": "192x192"
     }
   ],
-  "start_url": "/?launcher=true",
+  "start_url": "/",
   "display": "standalone",
   "orientation": "portrait",
   "theme_color": "#3F51B5",
