--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "build:html": "cp frontend/index.html public/initial.html && htmlprocessor public/initial.html -o public/processed.html && html-minifier --config-file htmlMinifier.conf --output public/temp.html public/processed.html",
     "build:mark": "hashmark -s -c public -r -l 6 -m assets.json '{js,styles,assets}/*.{css,js,json}' '{dir}/{name}-{hash}{ext}' && awk 'BEGIN { FS = \"\\\"\" } ;FNR==NR { array[$2]=$4; next } { for (i in array) gsub(i,array[i])}1' public/assets.json public/temp.html > public/index.html",
     "update-cache-policy": "replace-in-file /elm.+js/ `ls public/js/elm* | grep -Eo 'elm.+'` firebase.json --isRegex",
-    "postbuild": "rimraf public/temp.html && rimraf public/assets.json && rimraf public/processed.html && rimraf public/initial.html && workbox-cli generate:sw"
+    "postbuild": "rimraf public/temp.html && rimraf public/assets.json && rimraf public/processed.html && rimraf public/initial.html && sw-precache --root=public --config=sw-precache-config.js --verbose"
   },
   "dependencies": {
     "apicache": "^0.8.6",
@@ -111,7 +111,7 @@
     "nodemon": "^1.11.0",
     "replace-in-file": "^2.5.3",
     "rimraf": "^2.6.1",
-    "uglify-js": "^3.0.15",
-    "workbox-cli": "^1.0.1"
+    "sw-precache": "^5.2.0",
+    "uglify-js": "^3.0.15"
   }
 }
