--- a/frontend/assets/manifest.json
+++ b/frontend/assets/manifest.json
@@ -33,7 +33,7 @@
       "sizes": "512x512"
     }
   ],
-  "start_url": "/",
+  "start_url": "/index.html",
   "display": "standalone",
   "orientation": "portrait",
   "theme_color": "#3F51B5",
